@@ -1,3 +1,12 @@
+2023-04-03  G. Branden Robinson <g.branden.robinson@gmail.com>
+
+	* src/roff/troff/input.cpp (temp_iterator::temp_iterator):
+	Skip allocation of zero-length arrays.  Resolves "-Walloc-zero"
+	warning from GCC.
+
+	Fixes <https://savannah.gnu.org/bugs/?62398>.  Thanks to Bjarni
+	Ingi Gislason for the report.
+
 2023-04-02  G. Branden Robinson <g.branden.robinson@gmail.com>
 
 	* src/roff/troff/input.cpp (token::description): Revise
